--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2,9 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Yellowtail&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
 
-:root {
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -15,9 +12,7 @@
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    user-select: none;
-
-    
+    user-select: none; 
 }
 
 ::-webkit-scrollbar {
@@ -30,10 +25,15 @@
     --light-green: #eff6f1;
     --green: #7eb693;
     --yellow: #efd372;
+    --brawn: #8d643e;
     --white: #ffffff;
     --light-gray: #f9f8f8;
     --second-gray: #d4d4d4;
     --gray-text: #525c60;
+    --pointer: url(../Images/svg/pointer.svg);
+    --shadow: 0px 2px 3px rgba(0, 0, 0, 0.1), 0px 5px 6px rgba(0, 0, 0, 0.05),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+    --shadow-line: 0px 2px 0px rgba(0, 0, 0, 0.1);
 }
 
 body {
@@ -56,11 +56,77 @@ section {
     margin: 0 auto;
 }
 
+.header-nav li, .block-pages li, a, button, .block-backet, .block-logotype, .card, .card-product,
+.block-statistics_border-green, .type, .social-icons div, .block-section {
+    cursor: var(--pointer), pointer;
+    transition: all 0.3s ease-in;
+}
+
+.card-product__chapter, .block-statistics, .container-farm_list li {
+    transition: all 0.3s ease-in;
+}
+
+.card:hover, .type:hover {
+    background-size: 120%;
+}
+
+.block-logotype:hover img, .block-section:hover img, .social-icons div:hover img, 
+.block-backet:hover img, button:hover img, .customer-info:hover img, .card-product:hover .block-stars img {
+    animation: swing 1s ease-in;
+} 
+
+button:hover, .card-product:hover, .block-statistics_border-green:hover, li:hover a,
+.block-backet:hover a, .block-logotype:hover h2, .card-product:hover .card-product__name,
+.card:hover .title, .card:hover .pre-title, .form_send input:hover {
+    animation: scale 0.8s ease-in;
+}
+
+.button:hover, .block-backet:hover, .card:hover, .card-product:hover,
+.block-statistics_border-green:hover, .type:hover, .social-icons div:hover {
+    box-shadow: var(--shadow);
+}
+
+
+.type button:hover {
+    color: var(--white);
+}
+
+input:focus {
+    outline-color: var(--yellow);
+}
+
+.type-orange button:hover, .form_send .button:hover {
+    background: var(--yellow);
+}
+
+.type-green button:hover, .button-yellow:hover, .social-icons div:hover, .button:hover,
+.card-product:hover .card-product__chapter, .block-statistics_border-green:hover .block-statistics,
+.block-backet:hover, .block-nav-bar:hover .bar {
+    background: var(--green);
+}
+
+li:hover a {
+    color: var(--green);
+}
+
+.block-statistics_border-green:hover .block-statistics {
+    color: var(--white);
+}
+
+.type-nuts button:hover {
+    background: var(--brawn);
+}
+
+.block-section:hover, .container-farm_list li:hover {
+    box-shadow: var(--shadow-line);
+}
+
 ul {
     list-style: none;
 }
 
 a {
+    display: block;
     text-decoration: none;
     color: var(--dark-blue);
 }
@@ -102,10 +168,6 @@ input[type=checkbox] {
     transition: .5s ease-in;
 }
 
-.block-nav-bar:hover .bar {
-    background: var(--yellow);
-}
-
 .middle {
     opacity: 1;
 }
@@ -114,18 +176,12 @@ input[type=checkbox] {
     transform: rotate(0deg);
 }
 
-.block-backet:hover {
-    background: var(--yellow);
-}
-
 input[type=checkbox]:checked ~ ul {
     opacity: 1;
     background: var(--dark-blue);
     height: fit-content;
     top: 0;
     right: 0;
-    /* margin-top: 7.5px;
-    padding-left: 10px; */
 }
 
 input[type=checkbox]:checked ~ .block-backet{
@@ -151,10 +207,6 @@ input[type=checkbox]:checked ~ .block-nav {
     background: var(--dark-blue);
     position: absolute;
     transition: .5s ease-in;
-    /* position: fixed; */
-    /* border-radius: 0px; */
-    /* margin-bottom: 40px;
-    height: 100px; */
 }
 
 .header-blocks {
@@ -324,12 +376,14 @@ h3.title {
 
 .card-fruits {
     background-image: url(../Images/png/background__block-2_fruits.png);
+    background-position: center;
+    background-size: 100%;
+    transition: 0.3s ease-in;
+    border-radius: 30px;
 }
 
 .card {
     background-repeat: no-repeat;
-    background-size: contain;
-
 }
 
 .card-fruits p,
@@ -339,6 +393,10 @@ h3.title {
 
 .card-vegetables {
     background-image: url(../Images/png/background__block-2_vegetables.png);
+    background-position: center;
+    background-size: 100%;
+    transition: 0.3s ease-in;
+    border-radius: 30px;
 }
 
 .card__text {
@@ -773,19 +831,29 @@ h3.title {
 
 .type-orange {
     background: url(../Images/png/background__block-8_orange-water.png);
+    background-position: center;
+    background-size: 100%;
+    transition: 0.3s ease-in;
 }
 
 .type-green {
     background: url(../Images/png/background__block-8_green.png);
+    background-position: center;
+    background-size: 100%;
+    transition: 0.3s ease-in;
 }
 
 .type-nuts {
     background: url(../Images/png/background__block-8_fastfood.png);
+    background-position: center;
+    background-size: 100%;
+    transition: 0.3s ease-in;
 }
 
 .type {
     display: flex;
     justify-content: center;
+    background-repeat: no-repeat;
 }
 
 .type button {
@@ -793,7 +861,7 @@ h3.title {
     max-width: 300px;
     width: 100%;
     text-align: center;
-    margin: 242px auto;
+    margin: auto;
 
     font-weight: 700;
     font-size: 25px;
@@ -987,3 +1055,26 @@ margin-bottom: 35px;
 .block-pages h3 {
     margin-bottom: 20px;
 }
+
+@keyframes scale {
+	0% {
+        transform: scale(1);
+
+	}
+
+    50% {
+        transform: scale(1.05);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes swing { 
+    20% { transform: rotate(10deg); } 
+    40% { transform: rotate(-7deg); } 
+    60% { transform: rotate(3deg); } 
+    80% { transform: rotate(-3deg); } 
+    100% { transform: rotate(0deg); } 
+ } 
